# epstein-dossier

./: .env.example  .gitignore  DEVELOPMENT_LOG.md  Dockerfile.api  README.md  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  cli.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: annotations.py  documents.py  entities.py  export.py  faces.py  graph.py  image_analysis.py  search.py  timeline.py
backend/app/core/: config.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  annotation.py  document.py  entity.py  face.py  image_analysis.py
backend/app/pipelines/: __init__.py  date_extraction.py  downloader.py  entities.py  faces.py  image_analysis.py  indexer.py  ocr.py
backend/app/schemas/: __init__.py  annotation.py  document.py  entity.py  face.py  graph.py  image_analysis.py  search.py  timeline.py
backend/app/services/: __init__.py  chromadb.py  meilisearch.py  neo4j.py  search.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(main)/: layout.tsx  page.tsx
frontend/src/components/: BackgroundEffects.tsx  Header.tsx  Sidebar.tsx
frontend/src/components/bookmarks/: BookmarksView.tsx
frontend/src/components/document/: DocumentView.tsx  DocumentsList.tsx
frontend/src/components/entity/: EntityExplorer.tsx
frontend/src/components/face/: FaceGallery.tsx
frontend/src/components/graph/: GraphView.tsx
frontend/src/components/image-analysis/: ImageAnalysisView.tsx
frontend/src/components/search/: SearchView.tsx
frontend/src/components/settings/: SettingsView.tsx
frontend/src/components/timeline/: TimelineView.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/lib/: api.ts  themes.ts  utils.ts
frontend/src/types/: index.ts
(+13 files in other folders)
